Fixed animations on mobiles

--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -10,7 +10,7 @@
 
 @keyframes slideIn {
   0% {
-    transform: translateY(-3%);
+    transform: translateY(-2%);
   }
 
   100% {
