--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -12,7 +12,7 @@ $break-small: 650px;
 
 @keyframes slideIn {
   0% {
-    transform: translateY(-10%);
+    transform: translateY(-3%);
   }
 
   100% {
